# arbitraje-btc

./: .dockerignore  .gitignore  Makefile  README.md
_bmad/: config.toml  config.user.toml
backend/: .env.example  arbitraje.db-shm  pyproject.toml
backend/app/: __init__.py  config.py  logging_config.py  main.py  runner.py  state.py
backend/app/analysis/: __init__.py  naive_vs_edge.py
backend/app/api/: health.py  security.py
backend/app/api/v1/: router.py
backend/app/backtest/: __init__.py  recorder.py  replay.py
backend/app/bus/: __init__.py  queue.py
backend/app/calibration/: __init__.py  samples.py  survival.py
backend/app/demo/: __init__.py  fallback.py  scenarios.py
backend/app/engine/: __init__.py  bookmath.py  cost_model.py  depth_curve.py  detector.py  evaluator.py  explain.py  prioritizer.py  statz.py
backend/app/execution/: __init__.py  binance.py  models.py  preflight.py  registry.py
backend/app/ingest/: __init__.py  client_factory.py  exchange_ingestor.py
backend/app/integrity/: __init__.py  checker.py  models.py  validators.py
backend/app/metrics/: __init__.py  collector.py  prometheus.py
backend/app/models/: __init__.py  account.py  analysis.py  backtest.py  calibration.py  config.py  enums.py  events.py  execution.py  explain.py  market.py  metrics.py  opportunity.py  params.py  preflight.py  projection.py  risk.py  session.py  strategy.py
backend/app/normalize/: __init__.py  normalizer.py  peg.py  peg_ingestor.py
backend/app/projection/: __init__.py  capacity.py  forward.py  frontier.py  survival.py
backend/app/risk/: __init__.py  breakers.py  watchdog.py
backend/app/sim/: __init__.py  inventory.py  rebalancer.py  simulator.py
backend/app/store/: __init__.py  config_store.py  db.py  retention.py  writer.py
backend/app/strategies/: __init__.py  base.py  funding.py  regional_mxn.py  spatial.py  stat_z.py  triangular.py
backend/app/stream/: __init__.py  hub.py  pump.py
backend/app/validate/: __init__.py  harness.py  invariants.py  projection.py  report.py  results.py
backend/mcp_server/: __init__.py  server.py
backend/scripts/: probe_exchanges.py  profile_engine.py
backend/tests/: conftest.py  test_api_security.py  test_backtest.py  test_breakers.py  test_bus.py  test_calibration.py  test_capacity.py  test_config.py  test_config_api.py  test_config_store.py  test_control_auth.py  test_cost_model.py  test_demo.py  test_depth_curve.py  test_detect.py  test_evaluator.py  test_forward.py  test_health.py  test_hub.py  test_ingest.py  test_integrity.py  test_inventory.py  test_mcp_server.py  test_metrics.py  test_naive_vs_edge.py  test_normalize.py  test_opportunity_explain.py  test_params.py  test_persistence.py  test_preflight.py  test_prioritizer.py  test_projection.py  test_projection_api.py  test_resilience.py  test_retention.py  test_robustness_edges.py  test_simulator.py  test_state.py  test_statz.py  test_strategy_modules.py  (+3 more)
deploy/: Dockerfile  README.md  arbitraje-btc.service  docker-compose.yml  nginx.conf
docs/: CONTEXTO.md  auditoria-mejoras-fase-final.md  configuracion.md  guion-demo-jurado.md  investigacion-y-roadmap.md  mcp.md  plan-accion-final-12jul.md  plan-cierre-12jul.md  plan-mejora-integral-2026-07-11.md  respuesta-segunda-fase.md  respuestas-comite-coding-challenge.md
frontend/: .env.local.example  package-lock.json  package.json
(+97 files in other folders)
