[project]
name = "arbitraje-btc-backend"
version = "0.1.0"
description = "Bot de arbitraje de BTC (simulación) — backend FastAPI + pipeline asyncio"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",      # incluye uvloop + httptools
    "sse-starlette>=2.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "ccxt>=4.4",                    # ccxt.pro va incluido en el paquete ccxt
    "numpy>=1.26",
    "pandas>=2.2",
    "statsmodels>=0.14",
    "SQLAlchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# MCP server read-only (consulta del motor desde clientes MCP como Claude). Opcional: no es
# necesario para correr el backend ni los tests del core.
mcp = [
    "mcp>=1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "mcp>=1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
strict = true

[tool.coverage.run]
source = ["app"]
omit = ["app/ingest/client_factory.py"]  # cliente ccxt.pro real (red): no se ejercita en tests

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",  # cuerpos de Protocol
]
